<resources>

    <!-- App begin -->
    <string name="app_name">TestApp</string>
    <!-- App end -->

    <!-- Bottom menu begin -->
    <string name="bottom_menu_main">Главная</string>
    <string name="bottom_menu_favorites">Избранное</string>
    <string name="bottom_menu_account">Аккаунт</string>
    <!-- Bottom menu end -->

    <!-- Navigation begin -->
    <string name="navigation_onboarding">Онбординг</string>
    <string name="navigation_login">Вход</string>
    <string name="navigation_main">Главная</string>
    <string name="navigation_favorites">Избранное</string>
    <string name="navigation_account">Аккаунт</string>
    <!-- Navigation end -->

</resources>